# s21_decimal

./: CMakeLists.txt  Makefile  README.md  README_RUS.md  e.c  s21_another.c  s21_arithmetic.c  s21_comparison.c  s21_converters.c  s21_decimal.c  s21_decimal.h  s21_helpers.c  test.c  unit_test.c
report/: index-sort-f.html  index-sort-l.html  index.html
report/C5/: index-sort-f.html  index-sort-l.html  index.html  s21_another.c.func-sort-c.html  s21_another.c.func.html  s21_another.c.gcov.html  s21_arithmetic.c.func-sort-c.html  s21_arithmetic.c.func.html  s21_arithmetic.c.gcov.html  s21_comparison.c.func-sort-c.html  s21_comparison.c.func.html  s21_comparison.c.gcov.html  s21_converters.c.func-sort-c.html  s21_converters.c.func.html  s21_converters.c.gcov.html  s21_helpers.c.func-sort-c.html  s21_helpers.c.func.html  s21_helpers.c.gcov.html  unit_test.c.func-sort-c.html  unit_test.c.func.html  unit_test.c.gcov.html
